# paste-server-python

./: Dockerfile  client.py  local_test.py  pyproject.toml  requirements.txt  server.py
